[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Widget/Attributes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Widget/Abilities.tscn" type="PackedScene" id=3]
[ext_resource path="res://Widget/CardIdPopup.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0

[node name="Toolbar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="OpenButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Open"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Save"

[node name="SaveToButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Save to"

[node name="ReloadButton" type="Button" parent="MarginContainer/VBoxContainer/Toolbar"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Reload"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1900.0
margin_bottom = 38.0

[node name="Editor" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cards" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Editor"]
margin_right = 280.0
margin_bottom = 1018.0
rect_min_size = Vector2( 280, 0 )

[node name="CardListToolbar1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Editor/Cards"]
margin_right = 280.0
margin_bottom = 20.0

[node name="NewCardButton" type="Button" parent="MarginContainer/VBoxContainer/Editor/Cards/CardListToolbar1"]
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "New card"

[node name="DuplicateButton" type="Button" parent="MarginContainer/VBoxContainer/Editor/Cards/CardListToolbar1"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Duplicate"

[node name="CardListToolbar2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Editor/Cards"]
margin_top = 24.0
margin_right = 280.0
margin_bottom = 44.0

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/Editor/Cards/CardListToolbar2"]
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Refresh"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/Editor/Cards/CardListToolbar2"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 1, 0.305882, 0.305882, 1 )
text = "Delete"

[node name="CardList" type="ItemList" parent="MarginContainer/VBoxContainer/Editor/Cards"]
margin_top = 48.0
margin_right = 280.0
margin_bottom = 1018.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_colors/guide_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_constants/vseparation = 2
auto_height = true

[node name="Attributes" parent="MarginContainer/VBoxContainer/Editor" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 284.0
margin_right = 616.0
margin_bottom = 1018.0
rect_min_size = Vector2( 320, 0 )

[node name="Abilities" parent="MarginContainer/VBoxContainer/Editor" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_right = 1900.0
margin_bottom = 1018.0

[node name="CardIdPopup" parent="." instance=ExtResource( 4 )]
visible = false

[node name="JsonFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -373.0
margin_top = -397.5
margin_right = 373.0
margin_bottom = 397.5
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
show_hidden_files = true
current_dir = "D:/PROJECTS/Tool - CardDB Manager/_CardDB Manager"
current_path = "D:/PROJECTS/Tool - CardDB Manager/_CardDB Manager/"
